--- a/app/src/main/res/layout/fragment_registrar_encargado.xml
+++ b/app/src/main/res/layout/fragment_registrar_encargado.xml
@@ -25,16 +25,16 @@
                 android:layout_marginTop="20dp">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/txtNombreEncargado"
+                    android:id="@+id/txt_nombre_encargado_registrar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
                     android:background="@drawable/edit_text_redondo"
                     android:hint="@string/labelNombreServicio"
-                    android:padding="10dp"
+                    android:padding="@dimen/padding_edit_text"
                     android:textColorHint="@android:color/darker_gray"
-                    android:textSize="30dp" />
+                    android:textSize="@dimen/edit_text" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -44,16 +44,16 @@
                 android:layout_marginTop="20dp">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/txtCedulaEncargado"
+                    android:id="@+id/txt_cedula_encargado_registrar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
                     android:background="@drawable/edit_text_redondo"
                     android:hint="@string/labelCedula"
-                    android:padding="10dp"
+                    android:padding="@dimen/padding_edit_text"
                     android:textColorHint="@android:color/darker_gray"
-                    android:textSize="30dp" />
+                    android:textSize="@dimen/edit_text" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -63,16 +63,16 @@
                 android:layout_marginTop="20dp">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/txtContrasenaEncargado"
+                    android:id="@+id/txt_contrasena_encargado_registrar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="30dp"
                     android:layout_marginRight="30dp"
                     android:background="@drawable/edit_text_redondo"
                     android:hint="@string/labelContrasena"
-                    android:padding="10dp"
+                    android:padding="@dimen/padding_edit_text"
                     android:textColorHint="@android:color/darker_gray"
-                    android:textSize="30dp" />
+                    android:textSize="@dimen/edit_text" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -83,10 +83,10 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="20dp"
                 android:text="@string/labelServiciosGestionar"
-                android:textSize="20dp" />
+                android:textSize="@dimen/edit_text" />
 
             <android.support.v7.widget.AppCompatSpinner
-                android:id="@+id/comboServicioGestionar"
+                android:id="@+id/combo_servicios_gestionar_encargado_registrar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
@@ -105,10 +105,10 @@
                 android:layout_marginRight="30dp"
                 android:layout_marginTop="20dp"
                 android:text="@string/labelFoto"
-                android:textSize="20dp" />
+                android:textSize="@dimen/edit_text" />
 
             <ImageView
-                android:id="@+id/foto"
+                android:id="@+id/foto_encargado_registrar"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_marginLeft="50dp"
@@ -117,7 +117,7 @@
                 android:src="@drawable/usuario" />
 
             <Button
-                android:id="@+id/btnSeleccionar"
+                android:id="@+id/btn_seleccionar_foto_encargado_registrar"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:layout_marginLeft="60dp"
@@ -130,7 +130,7 @@
                 android:textSize="15dp" />
 
             <Button
-                android:id="@+id/btnRegistrar"
+                android:id="@+id/btn_registrar_encargado"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="30dp"
@@ -141,7 +141,7 @@
                 android:text="@string/btnRegistrarse"
                 android:textAlignment="center"
                 android:textColor="@android:color/white"
-                android:textSize="20dp" />
+                android:textSize="@dimen/edit_text" />
 
         </LinearLayout>
 
