--- a/app/src/main/res/layout/fragment_detalle_servicio_cliente.xml
+++ b/app/src/main/res/layout/fragment_detalle_servicio_cliente.xml
@@ -1,37 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".fragments.DetalleServicioFragment">
-
-    <LinearLayout
-        android:id="@+id/layout_btns_detalle_servicio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal"
-        android:visibility="invisible">
-
-        <ImageButton
-            android:id="@+id/btn_guardar_cambios_edicion_detalle_servicio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_guardar"
-            android:backgroundTint="@color/colorFondo" />
-
-        <ImageButton
-            android:id="@+id/btn_cancelar_edicion_detalle_servicio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_cancelar"
-            android:backgroundTint="@android:color/white" />
-    </LinearLayout>
-
 
 
     <ScrollView
@@ -49,16 +23,16 @@
                 android:id="@+id/label_titulo_servicio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:enabled="false"
                 android:text="Servicio"
                 android:textAlignment="center"
-                android:textSize="@dimen/label_titulo"
-                android:enabled="false"/>
+                android:textSize="@dimen/label_titulo" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="center">
+                android:layout_gravity="center"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/image_servicio"
@@ -66,28 +40,16 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/fotoservicio" />
 
-                <android.support.design.widget.FloatingActionButton
-                    android:id="@+id/btn_modificar_foto"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|end"
-                    android:layout_marginLeft="-25dp"
-                    app:backgroundTint="@color/colorFondo"
-                    android:src="@drawable/ic_foto"
-                    android:visibility="invisible"/>
-
             </LinearLayout>
-
-
 
             <EditText
                 android:id="@+id/txt_informacion_servicio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:lines="5"
                 android:enabled="false"
+                android:lines="5"
                 android:text="Descripcion del servicio \n Hora del servicio: \n Lugar del servcio: \nEncargado del servicio: "
-                android:textSize="@dimen/edit_text"/>
+                android:textSize="@dimen/edit_text" />
 
 
         </LinearLayout>
@@ -95,12 +57,12 @@
     </ScrollView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/btn_modificar_servicio"
+        android:id="@+id/btn_solicitar_servicio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/flotante_margin"
-        app:backgroundTint="@color/colorFondo"
-        android:src="@drawable/ic_modificar"/>
+        android:src="@drawable/ic_solicitar_servicio"
+        app:backgroundTint="@color/colorFondo" />
 
 </LinearLayout>
