Metodos y acciones asociados a la actividad del cliente

--- a/app/src/main/res/layout/fragment_registrar_encargado.xml
+++ b/app/src/main/res/layout/fragment_registrar_encargado.xml
@@ -113,8 +113,7 @@
                 android:layout_height="200dp"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:background="@drawable/edit_text_redondo"
-                android:src="@drawable/usuario" />
+                android:background="@drawable/edit_text_redondo"/>
 
             <Button
                 android:id="@+id/btn_seleccionar_foto_encargado_registrar"
