Update: Traduccion en las actividades

--- a/app/src/main/res/menu/administrador.xml
+++ b/app/src/main/res/menu/administrador.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:id="@+id/menu_cambiar_idioma"
+        android:icon="@drawable/ic_traducir"
+        android:orderInCategory="4"
         android:title="@string/itemIdioma"
         app:showAsAction="ifRoom" />
 </menu>
