Menu flotante al fragmento detalle servicio cliente

--- a/app/src/main/res/layout/fragment_detalle_servicio_cliente.xml
+++ b/app/src/main/res/layout/fragment_detalle_servicio_cliente.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".fragments.DetalleServicioFragment">
 
 
     <ScrollView
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="2">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:orientation="vertical">
 
             <EditText
@@ -56,13 +56,39 @@
 
     </ScrollView>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/btn_solicitar_servicio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/flotante_margin"
-        android:src="@drawable/ic_solicitar_servicio"
-        app:backgroundTint="@color/colorFondo" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <com.github.clans.fab.FloatingActionMenu
+            android:id="@+id/fab_menu_detalle_servicio_cliente"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/flotante_margin"
+            app:menu_colorNormal="@android:color/white"
+            app:menu_fab_label="@string/menu"
+            app:menu_icon="@drawable/ic_menu">
+
+
+            <com.github.clans.fab.FloatingActionButton
+                android:id="@+id/fab_btn_solicitar_servicio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_solicitar"
+                app:fab_colorNormal="@android:color/white"
+                app:fab_label="@string/btn_eliminar" />
+
+            <com.github.clans.fab.FloatingActionButton
+                android:id="@+id/fab_btn_editar_encargado"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_compartir"
+                app:fab_colorNormal="@android:color/white"
+                app:fab_label="@string/btn_editar" />
+
+        </com.github.clans.fab.FloatingActionMenu>
+    </LinearLayout>
+
+</android.support.constraint.ConstraintLayout>
