--- a/app/src/main/res/layout/fragment_registrar_encargado.xml
+++ b/app/src/main/res/layout/fragment_registrar_encargado.xml
@@ -76,6 +76,25 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/txt_telefono_encargado_registrar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:background="@drawable/edit_text_redondo"
+                    android:hint="@string/labelContrasena"
+                    android:padding="@dimen/padding_edit_text"
+                    android:textColorHint="@android:color/darker_gray"
+                    android:textSize="@dimen/edit_text" />
+
+            </android.support.design.widget.TextInputLayout>
+
             <TextView
                 android:id="@+id/labelServiciosGestionar"
                 android:layout_width="match_parent"
