--- a/app/src/main/res/layout/fragment_registrar_servicio.xml
+++ b/app/src/main/res/layout/fragment_registrar_servicio.xml
@@ -46,6 +46,24 @@
                 android:layout_marginTop="15dp">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/txtDescripcionServicio"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:background="@drawable/edit_text_redondo"
+                    android:hint="@string/descripcion"
+                    android:padding="@dimen/padding_edit_text"
+                    android:textColorHint="@android:color/darker_gray"
+                    android:textSize="@dimen/edit_text" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp">
+
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/txtLugarServicio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -53,6 +71,24 @@
                     android:layout_marginRight="30dp"
                     android:background="@drawable/edit_text_redondo"
                     android:hint="@string/labelLugarServicio"
+                    android:padding="@dimen/padding_edit_text"
+                    android:textColorHint="@android:color/darker_gray"
+                    android:textSize="@dimen/edit_text" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/txtRecursosDisponibles"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
+                    android:background="@drawable/edit_text_redondo"
+                    android:hint="@string/recursosDisponibles"
                     android:padding="@dimen/padding_edit_text"
                     android:textColorHint="@android:color/darker_gray"
                     android:textSize="@dimen/edit_text" />
@@ -121,7 +157,7 @@
                 android:textSize="15dp" />
 
             <Button
-                android:id="@+id/btnRegistrar"
+                android:id="@+id/btnRegistrarServicio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="30dp"
